--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
   "dependencies": {
     "inherits": "^2.0.1",
     "ws": "^1.1.1",
-    "bufferutil": "1.2.x",
-    "utf-8-validate": "1.2.x"
+    "bufferutil": "^1.2.x",
+    "utf-8-validate": "^5.0.0"
   },
   "devDependencies": {
     "bower": "~1.7.9",
