--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   "dependencies": {
     "inherits": "^2.0.1",
     "ws": "^1.1.1",
-    "bufferutil": "^1.2.x",
+    "bufferutil": "^4.0.0",
     "utf-8-validate": "^5.0.0"
   },
   "devDependencies": {
